--- a/index.html
+++ b/index.html
@@ -9,37 +9,17 @@
   </head>
   <body class="index is-preload">
     <div id="page-wrapper">
-      <!-- Header -->
       <header id="header" class="alt">
-        <!-- <h1 id="logo"><a href="index.html">Jacuzzi Journeys</a></h1> -->
+        <h1 id="logo"><a href="index.html">Jacuzzi Journeys</a></h1>
         <nav id="nav">
           <ul>
             <li class="current"><a href="index.html">Home</a></li>
+            <li><a href="offerings.html">Offerings</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <!-- <li class="submenu">
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li> -->
           </ul>
         </nav>
       </header>
 
-      <!-- Banner -->
       <section id="banner">
         <div class="inner">
           <header>
@@ -54,17 +34,12 @@
         </div>
       </section>
 
-      <!-- Main -->
       <article id="main">
         <header class="special container">
           <h2>
             Imagine soaking in a wood-fired hot tub while cruising along scenic waterways, surrounded by stunning landscapes and accompanied by good company.
             That's the essence of a hot tug adventure with us.
           </h2>
-          <p>
-            Our unique offerings cater to individuals, couples, families, and groups looking for a one-of-a-kind experience. Whether it's a leisurely cruise to
-            unwind and take in the views or a lively celebration with friends, our hot tugs provide the perfect setting.
-          </p>
         </header>
 
         <!-- One -->
@@ -160,60 +135,47 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                <header>
-                  <h3>Hot Tug Experiences</h3>
+                <a href="/offerings.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
+                <header style="margin-bottom: 50px;">
+                  <h3><a href="/offerings.html">Hot Tug Experiences</a></h3>
                 </header>
-                <p>
-                  Enjoy unforgettable adventures on the water with your one-of-a-kind portable hot tubs. Guests can soak in the warm waters while cruising along
-                  scenic waterways, taking in breathtaking views, and enjoying the company of friends or family.
-                </p>
+                <span></span>
               </section>
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-                <header>
-                  <h3>Camping Retreats</h3>
+                <a href="/offerings.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
+                <header style="margin-bottom: 50px;">
+                  <h3><a href="/offerings.html">Camping Retreats</a></h3>
                 </header>
-                <p>
-                  Escape the hustle and bustle of city life with immersive camping retreats in picturesque locations. Set up camp in serene natural settings,
-                  providing guests with a chance to reconnect with nature and unwind under the stars.
-                </p>
+                <span></span>
               </section>
             </div>
           </div>
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                <header>
-                  <h3>Tree Tent Accommodations</h3>
+                <a href="/offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
+                <header style="margin-bottom: 50px;">
+                  <h3><a href="/offerings.html">Tree Tent Accommodations</a></h3>
                 </header>
-                <p>
-                  Elevate the camping experience with unique tree tents suspended above the ground. These innovative accommodations offer comfort and adventure,
-                  allowing guests to sleep amidst the trees while enjoying stunning views and the soothing sounds of nature.
-                </p>
+                <span></span>
               </section>
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-                <header>
-                  <h3>Guided Adventures</h3>
+                <a href="/offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
+                <header style="margin-bottom: 50px;">
+                  <h3><a href="/offerings.html">Guided Adventures</a></h3>
                 </header>
-                <p>
-                  Offer guided tours and experiences led by experienced outdoor enthusiasts. Whether it's exploring hidden gems in the wilderness, embarking on
-                  scenic hikes, or discovering local wildlife, guided adventures provide guests with memorable experiences and valuable insights into the
-                  natural world.
-                </p>
+                <span></span>
               </section>
             </div>
           </div>
 
           <footer class="major">
             <ul class="buttons">
-              <li><a href="#" class="button">See More</a></li>
+              <li><a href="/offerings.html" class="button">See More</a></li>
             </ul>
           </footer>
         </section>
@@ -223,7 +185,7 @@
       <section id="cta">
         <header>
           <h2>Ready to book your next <strong>adventure</strong>?</h2>
-          <p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
+          <p>Zach, do we want anything here or leave it blank?</p>
         </header>
         <footer>
           <ul class="buttons">
