--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="offerings.html">Offerings</a></li>
+            <li><a href="aboutus.html">About us</a></li>
             <li class="current"><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
