--- a/offerings.html
+++ b/offerings.html
@@ -15,6 +15,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li class="current"><a href="offerings.html">Offerings</a></li>
+            <li><a href="aboutus.html">About us</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
