--- a/index.html
+++ b/index.html
@@ -136,18 +136,18 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="/offerings.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
+                <a href="offerings.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
                 <header style="margin-bottom: 50px;">
-                  <h3><a href="/offerings.html">Hot Tug Experiences</a></h3>
+                  <h3><a href="offerings.html">Hot Tug Experiences</a></h3>
                 </header>
                 <span></span>
               </section>
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="/offerings.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
+                <a href="offerings.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
                 <header style="margin-bottom: 50px;">
-                  <h3><a href="/offerings.html">Camping Retreats</a></h3>
+                  <h3><a href="offerings.html">Camping Retreats</a></h3>
                 </header>
                 <span></span>
               </section>
@@ -156,18 +156,18 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="/offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
+                <a href="offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
                 <header style="margin-bottom: 50px;">
-                  <h3><a href="/offerings.html">Tree Tent Accommodations</a></h3>
+                  <h3><a href="offerings.html">Tree Tent Accommodations</a></h3>
                 </header>
                 <span></span>
               </section>
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="/offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
+                <a href="offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
                 <header style="margin-bottom: 50px;">
-                  <h3><a href="/offerings.html">Guided Adventures</a></h3>
+                  <h3><a href="offerings.html">Guided Adventures</a></h3>
                 </header>
                 <span></span>
               </section>
@@ -176,7 +176,7 @@
 
           <footer class="major">
             <ul class="buttons">
-              <li><a href="/offerings.html" class="button">See More</a></li>
+              <li><a href="offerings.html" class="button">See More</a></li>
             </ul>
           </footer>
         </section>
@@ -191,7 +191,7 @@
         <footer>
           <ul class="buttons">
             <li><a href="#" class="button primary">Book now</a></li>
-            <li><a href="/contact.html" class="button">Contact us</a></li>
+            <li><a href="contact.html" class="button">Contact us</a></li>
           </ul>
         </footer>
       </section>
