--- a/offerings.html
+++ b/offerings.html
@@ -41,7 +41,7 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="/offerings.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
+                <a href="offerings.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
                 <header>
                   <h3>Hot Tug Experiences</h3>
                 </header>
@@ -57,7 +57,7 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="/offerings.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
+                <a href="offerings.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
                 <header>
                   <h3>Camping Retreats</h3>
                 </header>
@@ -75,7 +75,7 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="/offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
+                <a href="offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
                 <header>
                   <h3>Tree Tent Accommodations</h3>
                 </header>
@@ -91,7 +91,7 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="/offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
+                <a href="offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
                 <header>
                   <h3>Guided Adventures</h3>
                 </header>
@@ -130,7 +130,7 @@
               </footer>
             </div>
             <div class="col-4 col-12-narrower imp-narrower">
-              <ul class="featured-icons">
+              <!-- <ul class="featured-icons">
                 <li>
                   <span class="icon fa-clock"><span class="label">Feature 1</span></span>
                 </li>
@@ -149,7 +149,7 @@
                 <li>
                   <span class="icon solid fa-cog"><span class="label">Feature 6</span></span>
                 </li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </section>
@@ -213,24 +213,6 @@
 
       <!-- Footer -->
       <footer id="footer">
-        <!-- <ul class="icons">
-          <li>
-            <a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a>
-          </li>
-          <li>
-            <a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a>
-          </li>
-          <li>
-            <a href="#" class="icon brands circle fa-google-plus-g"><span class="label">Google+</span></a>
-          </li>
-          <li>
-            <a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a>
-          </li>
-          <li>
-            <a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a>
-          </li>
-        </ul> -->
-
         <ul class="copyright">
           <li>&copy; Jacuzzi Journeys</li>
         </ul>
