--- a/camping.html
+++ b/camping.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About us | Jacuzzi Journeys</title>
+    <title>Camping Retreats | Jacuzzi Journeys</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -14,7 +14,7 @@
         <nav id="nav">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li class="submenu">
+            <li class="submenu current">
               <a href="offerings.html">Offerings</a>
               <ul>
                 <li><a href="hot-tug.html">Hot Tug Experiences</a></li>
@@ -23,30 +23,72 @@
                 <li><a href="guided.html">Guided Adventures</a></li>
               </ul>
             </li>
-            <li class="current"><a href="aboutus.html">About us</a></li>
+            <li><a href="aboutus.html">About us</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
-      <section id="banner">
+
+      <section id="banner" class="camping">
         <div class="inner">
           <header>
-            <h2>About us</h2>
+            <h2>Camping Retreats</h2>
           </header>
         </div>
       </section>
 
-      <!-- Main -->
       <article id="main">
         <header class="special container">
           <h2>
-            Powered by eco-friendly wood-fired heaters, our hot tugs offer a sustainable way to enjoy the water while minimizing our environmental footprint.
-            Safety and comfort are our top priorities, ensuring that every adventure with us is not only memorable but also secure.
+            Escape the hustle and bustle of city life with immersive camping retreats in picturesque locations. Set up camp in serene natural settings,
+            providing guests with a chance to reconnect with nature and unwind under the stars.
           </h2>
         </header>
 
+        <!-- One -->
+        <!-- <section class="wrapper style2 container special-alt">
+          <div class="row gtr-50">
+            <div class="col-8 col-12-narrower">
+              <header>
+                <h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
+              </header>
+              <p>
+                Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique
+                purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.
+              </p>
+              <footer>
+                <ul class="buttons">
+                  <li><a href="#" class="button">Find Out More</a></li>
+                </ul>
+              </footer>
+            </div>
+            <div class="col-4 col-12-narrower imp-narrower">
+              <ul class="featured-icons">
+                <li>
+                  <span class="icon fa-clock"><span class="label">Feature 1</span></span>
+                </li>
+                <li>
+                  <span class="icon solid fa-volume-up"><span class="label">Feature 2</span></span>
+                </li>
+                <li>
+                  <span class="icon solid fa-laptop"><span class="label">Feature 3</span></span>
+                </li>
+                <li>
+                  <span class="icon solid fa-inbox"><span class="label">Feature 4</span></span>
+                </li>
+                <li>
+                  <span class="icon solid fa-lock"><span class="label">Feature 5</span></span>
+                </li>
+                <li>
+                  <span class="icon solid fa-cog"><span class="label">Feature 6</span></span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section> -->
+
         <!-- Two -->
-        <section class="wrapper style1 container special">
+        <!-- <section class="wrapper style1 container special">
           <div class="row">
             <div class="col-4 col-12-narrower">
               <section>
@@ -85,6 +127,60 @@
               </section>
             </div>
           </div>
+        </section> -->
+
+        <!-- Three -->
+        <section class="wrapper style3 container special">
+          <header class="major">
+            <h2>Camping Retreats</h2>
+          </header>
+
+          <div class="row">
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="offerings.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="offerings.html">Hot Tug Experiences</a></h3>
+                </header>
+                <span></span>
+              </section>
+            </div>
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="offerings.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="offerings.html">Camping Retreats</a></h3>
+                </header>
+                <span></span>
+              </section>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="offerings.html">Tree Tent Accommodations</a></h3>
+                </header>
+                <span></span>
+              </section>
+            </div>
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="offerings.html">Guided Adventures</a></h3>
+                </header>
+                <span></span>
+              </section>
+            </div>
+          </div>
+
+          <footer class="major">
+            <ul class="buttons">
+              <li><a href="offerings.html" class="button">See More</a></li>
+            </ul>
+          </footer>
         </section>
       </article>
 
@@ -97,7 +193,7 @@
         <footer>
           <ul class="buttons">
             <li><a href="#" class="button primary">Book now</a></li>
-            <li><a href="#" class="button">Contact us</a></li>
+            <li><a href="contact.html" class="button">Contact us</a></li>
           </ul>
         </footer>
       </section>
