--- a/guided.html
+++ b/guided.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>What we offer | Jacuzzi Journeys</title>
+    <title>Guided Adventures | Jacuzzi Journeys</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -28,108 +28,33 @@
           </ul>
         </nav>
       </header>
-      <section id="banner">
+
+      <section id="banner" class="guided">
         <div class="inner">
           <header>
-            <h2>What do we offer?</h2>
+            <h2>Guided Adventures</h2>
           </header>
         </div>
       </section>
 
-      <!-- Main -->
       <article id="main">
         <header class="special container">
           <h2>
-            Our unique offerings cater to individuals, couples, families, and groups looking for a one-of-a-kind experience. Whether it's a leisurely cruise to
-            unwind and take in the views or a lively celebration with friends, our hot tugs provide the perfect setting.
+            Offer guided tours and experiences led by experienced outdoor enthusiasts. Whether it's exploring hidden gems in the wilderness, embarking on scenic
+            hikes, or discovering local wildlife, guided adventures provide guests with memorable experiences and valuable insights into the natural world.
           </h2>
         </header>
 
-        <section class="wrapper style3 container special">
-          <div class="row">
-            <div class="col-6 col-12-narrower">
-              <section>
-                <a href="offerings.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
-                <header>
-                  <h3>Hot Tug Experiences</h3>
-                </header>
-                <p>
-                  Enjoy unforgettable adventures on the water with your one-of-a-kind portable hot tubs. Guests can soak in the warm waters while cruising along
-                  scenic waterways, taking in breathtaking views, and enjoying the company of friends or family.
-                </p>
-                <ul class="buttons">
-                  <li><a href="#" class="button">Book now</a></li>
-                </ul>
-                <span></span>
-              </section>
-            </div>
-            <div class="col-6 col-12-narrower">
-              <section>
-                <a href="offerings.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
-                <header>
-                  <h3>Camping Retreats</h3>
-                </header>
-                <p>
-                  Escape the hustle and bustle of city life with immersive camping retreats in picturesque locations. Set up camp in serene natural settings,
-                  providing guests with a chance to reconnect with nature and unwind under the stars.
-                </p>
-                <ul class="buttons">
-                  <li><a href="#" class="button">Book now</a></li>
-                </ul>
-                <span></span>
-              </section>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-6 col-12-narrower">
-              <section>
-                <a href="offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
-                <header>
-                  <h3>Tree Tent Accommodations</h3>
-                </header>
-                <p>
-                  Elevate the camping experience with unique tree tents suspended above the ground. These innovative accommodations offer comfort and adventure,
-                  allowing guests to sleep amidst the trees while enjoying stunning views and the soothing sounds of nature.
-                </p>
-                <ul class="buttons">
-                  <li><a href="#" class="button">Book now</a></li>
-                </ul>
-                <span></span>
-              </section>
-            </div>
-            <div class="col-6 col-12-narrower">
-              <section>
-                <a href="offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
-                <header>
-                  <h3>Guided Adventures</h3>
-                </header>
-                <p>
-                  Offer guided tours and experiences led by experienced outdoor enthusiasts. Whether it's exploring hidden gems in the wilderness, embarking on
-                  scenic hikes, or discovering local wildlife, guided adventures provide guests with memorable experiences and valuable insights into the
-                  natural world.
-                </p>
-                <ul class="buttons">
-                  <li><a href="#" class="button">Book now</a></li>
-                </ul>
-                <span></span>
-              </section>
-            </div>
-          </div>
-        </section>
-
         <!-- One -->
-        <section class="wrapper style2 container special-alt">
+        <!-- <section class="wrapper style2 container special-alt">
           <div class="row gtr-50">
             <div class="col-8 col-12-narrower">
               <header>
-                <h2>
-                  Join us at Jacuzzi Journey for an unforgettable experience where relaxation meets adventure on the water. Get ready to soak, camp, and create
-                  lasting memories with us!
-                </h2>
+                <h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
               </header>
               <p>
-                Powered by eco-friendly wood-fired heaters, our hot tugs offer a sustainable way to enjoy the water while minimizing our environmental
-                footprint. Safety and comfort are our top priorities, ensuring that every adventure with us is not only memorable but also secure.
+                Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique
+                purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.
               </p>
               <footer>
                 <ul class="buttons">
@@ -138,7 +63,7 @@
               </footer>
             </div>
             <div class="col-4 col-12-narrower imp-narrower">
-              <!-- <ul class="featured-icons">
+              <ul class="featured-icons">
                 <li>
                   <span class="icon fa-clock"><span class="label">Feature 1</span></span>
                 </li>
@@ -157,13 +82,13 @@
                 <li>
                   <span class="icon solid fa-cog"><span class="label">Feature 6</span></span>
                 </li>
-              </ul> -->
+              </ul>
             </div>
           </div>
-        </section>
+        </section> -->
 
         <!-- Two -->
-        <section class="wrapper style1 container special">
+        <!-- <section class="wrapper style1 container special">
           <div class="row">
             <div class="col-4 col-12-narrower">
               <section>
@@ -202,6 +127,60 @@
               </section>
             </div>
           </div>
+        </section> -->
+
+        <!-- Three -->
+        <section class="wrapper style3 container special">
+          <header class="major">
+            <h2>Guided Adventures</h2>
+          </header>
+
+          <div class="row">
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="offerings.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="offerings.html">Hot Tug Experiences</a></h3>
+                </header>
+                <span></span>
+              </section>
+            </div>
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="offerings.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="offerings.html">Camping Retreats</a></h3>
+                </header>
+                <span></span>
+              </section>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="offerings.html">Tree Tent Accommodations</a></h3>
+                </header>
+                <span></span>
+              </section>
+            </div>
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="offerings.html">Guided Adventures</a></h3>
+                </header>
+                <span></span>
+              </section>
+            </div>
+          </div>
+
+          <footer class="major">
+            <ul class="buttons">
+              <li><a href="offerings.html" class="button">See More</a></li>
+            </ul>
+          </footer>
         </section>
       </article>
 
@@ -214,13 +193,31 @@
         <footer>
           <ul class="buttons">
             <li><a href="#" class="button primary">Book now</a></li>
-            <li><a href="#" class="button">Contact us</a></li>
+            <li><a href="contact.html" class="button">Contact us</a></li>
           </ul>
         </footer>
       </section>
 
       <!-- Footer -->
       <footer id="footer">
+        <!-- <ul class="icons">
+          <li>
+            <a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a>
+          </li>
+          <li>
+            <a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a>
+          </li>
+          <li>
+            <a href="#" class="icon brands circle fa-google-plus-g"><span class="label">Google+</span></a>
+          </li>
+          <li>
+            <a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a>
+          </li>
+          <li>
+            <a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a>
+          </li>
+        </ul> -->
+
         <ul class="copyright">
           <li>&copy; Jacuzzi Journeys</li>
         </ul>
