--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
         <nav id="nav">
           <ul>
             <li class="current"><a href="index.html">Home</a></li>
-            <li><a href="offerings.html">Offerings</a></li>
+            <li class="submenu">
+              <a href="offerings.html">Offerings</a>
+              <ul>
+                <li><a href="hot-tug.html">Hot Tug Experiences</a></li>
+                <li><a href="camping.html">Camping Retreats</a></li>
+                <li><a href="tree-tent.html">Tree Tent Accommodations</a></li>
+                <li><a href="guided.html">Guided Adventures</a></li>
+              </ul>
+            </li>
             <li><a href="aboutus.html">About us</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
